# validrix

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.web-agent  README.md  docker-compose.yml  pyproject.toml  validrix.yml
.github/workflows/: ci.yml
docs/: architecture.md
tests/examples/: __init__.py  test_ai_generator_offline.py  test_base_test_usage.py  test_config_manager.py  test_flaky_detector.py  test_retry_manager.py
tests/fixtures/: sample_validrix.yml
tests/integration/: test_web_agent_e2e.py
tests/unit/: test_ai_generator_reporter_unit.py  test_api_routes_unit.py  test_cli_and_docker_unit.py  test_config_and_base_unit.py  test_flaky_and_healing_unit.py  test_package_exports_unit.py  test_package_exports_web_agent_unit.py  test_retry_manager_unit.py  test_web_agent_crawler_executor_reporter_unit.py  test_web_agent_models_and_generator_unit.py
validrix/: __init__.py  conftest.py
validrix/api/: __init__.py  routes.py
validrix/cli/: __init__.py  framework_cli.py
validrix/core/: __init__.py  base_test.py  config_manager.py  retry_manager.py
validrix/integrations/: __init__.py  docker_runner.py
validrix/plugins/: __init__.py  ai_generator.py  ai_reporter.py  flaky_detector.py  self_healing.py
validrix/ui/: index.html
validrix/web_agent/: __init__.py  crawler.py  executor.py  models.py  reporter.py  test_generator.py
