# =============================================================================
# pyproject.toml — Validrix build & dependency manifest
#
# Design decision: PEP 517/518 with Hatch as the build backend.
# Hatch is the modern, official PyPA-recommended tool that replaces setup.py
# and provides a unified interface for building, testing, and publishing.
#
# Alternatives considered:
#   - setuptools + setup.cfg: legacy, more boilerplate
#   - Poetry: opinionated lock-file model adds friction for library authors
#   - Flit: great for pure-Python libs but lacks plugin hook support
#
# Entry points ("pytest11") are the standard mechanism pytest uses to
# auto-discover plugins — no user-side import required.
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "validrix"
version = "0.1.0"
description = "AI-Powered PyTest Plugin Framework with self-healing locators, flaky detection, and automated test generation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Mehedi Hasan" }]
keywords = ["pytest", "testing", "ai", "automation", "playwright", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

# ---------------------------------------------------------------------------
# Runtime dependencies — pinned to minor version for reproducibility
# ---------------------------------------------------------------------------
dependencies = [
    # Core test runner
    "pytest>=8.2,<9",

    # Config & validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6.0,<7",

    # AI integrations
    "anthropic>=0.28,<1",
    "openai>=1.30,<2",                  # optional fallback provider

    # CLI
    "click>=8.1,<9",
    "rich>=13.7,<14",                   # pretty terminal output

    # Browser automation
    "playwright>=1.44,<2",

    # HTTP & async utilities
    "httpx>=0.27,<1",
    "tenacity>=8.3,<9",                 # retry primitives (backs retry_manager)

    # Reporting
    "jinja2>=3.1,<4",                   # HTML report templating

    # Web Agent — new in v0.2
    "fastapi>=0.111,<1",                # async API server for web_agent
    "uvicorn[standard]>=0.29,<1",       # ASGI server (websocket + h11)
    "pytest-json-report>=1.5,<2",       # structured JSON output for executor.py
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    "pre-commit>=3.7,<4",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]

# ---------------------------------------------------------------------------
# pytest plugin auto-discovery
# Entry point group "pytest11" is the pytest plugin hook.
# Each key becomes the plugin name shown in `pytest --co -q`.
# ---------------------------------------------------------------------------
[project.entry-points."pytest11"]
validrix-core       = "validrix.conftest"
validrix-flaky      = "validrix.plugins.flaky_detector"
validrix-healing    = "validrix.plugins.self_healing"
validrix-ai-report  = "validrix.plugins.ai_reporter"

# ---------------------------------------------------------------------------
# CLI entry point — installs `validrix` command
# ---------------------------------------------------------------------------
[project.scripts]
validrix        = "validrix.cli.framework_cli:cli"
validrix-server = "uvicorn:main"     # convenience: validrix-server validrix.api:app --reload

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["validrix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli   = true
log_level = "INFO"
addopts   = "-ra -q --tb=short"

[tool.ruff]
target-version = "py311"
line-length    = 120

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM"]
ignore  = []

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true

[tool.coverage.run]
source   = ["validrix"]
branch   = true

[tool.coverage.report]
fail_under = 80
show_missing = true
